--- a/node-red-contrib-teamogy-api/teamogy-client.html
+++ b/node-red-contrib-teamogy-api/teamogy-client.html
@@ -73,7 +73,7 @@
 	  
 	  <div class="form-row">
         <label for="node-config-input-unit"><i class="fa fa-square-o"></i> <span>Unit/Agency</span></label>
-        <input type="number" id="node-config-input-unit" min="1" max="100" step="1" placeholder="1" style="width: 20%">
+        <input type="number" id="node-config-input-unit" min="0" max="100" step="1" placeholder="1" style="width: 20%">
       </div>
 	  
       <div class="form-row">
@@ -167,7 +167,7 @@ RED.nodes.registerType('teamogy-config', {
 		
 		$('#node-config-input-unit').on('change', function() {
 			if(!$.isNumeric($(this).val())) { $(this).val(1) } else {
-				if($(this).val() < 1 || $(this).val() > 100 ) { $(this).val(1) } 
+				if($(this).val() < 0 || $(this).val() > 100 ) { $(this).val(1) } 
 			}
 		})
 	
@@ -220,7 +220,7 @@ RED.nodes.registerType('teamogy-config', {
 	  </div>
 	  
 	  <div class="form-row">
-		<label for="node-input-mode" style="width: 130px"><i class="fa fa-globe"></i> <span>Request views</span></label>
+		<label for="node-input-mode" style="width: 130px"><i class="fa fa-refresh"></i> <span>Request views</span></label>
 		<input type="checkbox" id="node-input-mode" style=" width:20px;">
 	  </div>
 	  
@@ -260,8 +260,9 @@ RED.nodes.registerType('teamogy-config', {
 	  </div>
 
 	  <div class="form-row" id="node-row-response-option">
-		<label style="width: 130px"><span>Response option</span></label>
 		<div style="margin-bottom: 10px;"></div>
+		<label style="width: 130px"></i><span>View option</span></label>
+		<div style="margin-bottom: 5px;"></div>
 		<div class="form-row">
 		  <label for="node-input-merge" style="width: 130px"><i class="fa fa-compress"></i> <span> Merge</span></label>
 		  <input type="checkbox" id="node-input-merge" style=" width:20px;">
@@ -278,6 +279,10 @@ RED.nodes.registerType('teamogy-config', {
 		  <label for="node-input-offset" style="width: 130px"><i class="fa fa-forward"></i><span> Offset</span></label>
 		  <input type="number" id="node-input-offset"  min="0" step="1" style="width:20%">
 		</div>
+		<div class="form-row">
+		  <label for="node-input-delay" style="width: 130px"><i class="fa fa-clock-o"></i><span> Pag. delay (s)</span></label>
+		  <input type="number" id="node-input-delay"  min="0" max="600" step="1" style="width:20%">
+		</div>
 	  </div>
 	  
 	  <div class="form-row" id="node-row-editor-dynamic">
@@ -285,8 +290,23 @@ RED.nodes.registerType('teamogy-config', {
 		  <label for="node-input-params" style="width: 130px"><i class="fa fa-code"></i> Source of body</label>
 		  <input type="text" id="node-input-body-source" style="width: 65%">
 		  <input type="hidden" id="node-input-body-source-type" style="width: 0px">
-    </div>
+		</div>
 	  </div>
+	  
+	  <div class="form-row" id="node-row-error-option">
+	    <div style="margin-bottom: 10px;"></div>
+		<label style="width: 130px"><span>If an error occurs</span></label>
+		<div style="margin-bottom: 5px;"></div>
+		<div class="form-row">
+		  <label for="node-input-repeat" style="width: 130px"><i class="fa fa-repeat"></i><span> Req. repeat</span></label>
+		  <input type="number" id="node-input-repeat"  min="0" max="10" step="1" style="width:20%">
+		</div>
+		<div class="form-row">
+		  <label for="node-input-rdelay" style="width: 130px"><i class="fa fa-clock-o"></i><span> Req. delay (s)</span></label>
+		  <input type="number" id="node-input-rdelay"  min="0" max="600" step="1" style="width:20%">
+		</div>
+	  </div>
+	  
 	</div>
   </div>
 </script>
@@ -338,7 +358,19 @@ RED.nodes.registerType('teamogy-client',{
 		offset: {
 			value: 0,
 			required: true
-		}
+		},
+		delay: {
+			value: 0,
+			required: true
+		},
+		repeat: {
+			value: 5,
+			required: true
+		},		
+		rdelay: {
+			value: 30,
+			required: true
+		}		
 	},
 	inputs: 1,
 	outputs:1,
@@ -367,6 +399,9 @@ RED.nodes.registerType('teamogy-client',{
 		$('#node-input-limit').val(this.limit);
 		$('#node-input-paging').val(this.paging);
 		$('#node-input-offset').val(this.offset);
+		$('#node-input-delay').val(this.delay);
+		$('#node-input-repeat').val(this.repeat);
+		$('#node-input-rdelay').val(this.rdelay);
 		
 		$('#node-input-mode').val(this.mode);
 		$('#node-input-body-source').val(this.bodysource);
@@ -460,6 +495,17 @@ RED.nodes.registerType('teamogy-client',{
 			if(!$.isNumeric($(this).val())) { $(this).val(0) }
 		})
 		
+		$('#node-input-delay').on('change', function() {
+			if(!$.isNumeric($(this).val())) { $(this).val(0) }
+		})
+		$('#node-input-repeat').on('change', function() {
+			if(!$.isNumeric($(this).val())) { $(this).val(5) }
+		})
+		
+		$('#node-input-rdelay').on('change', function() {
+			if(!$.isNumeric($(this).val())) { $(this).val(30) }
+		})
+		
 		this.editorp = RED.editor.createEditor({
 			id: 'node-input-params',
 			mode: 'ace/mode/text',
@@ -496,7 +542,11 @@ RED.nodes.registerType('teamogy-client',{
 		if(!$("#node-input-limit").val()) {this.limit = 0} else {this.limit = $("#node-input-limit").val();}
 		if(!$("#node-input-offset").val()) {this.offset = 0} else {this.offset = $("#node-input-offset").val();}
 		this.paging = $("#node-input-paging").val();
-		  
+		
+		if(!$("#node-input-delay").val()) {this.delay = 0} else {this.delay = $("#node-input-delay").val();}
+		if(!$("#node-input-repeat").val()) {this.repeat = 0} else {this.repeat = $("#node-input-repeat").val();}
+		if(!$("#node-input-rdelay").val()) {this.rdelay = 0} else {this.rdelay = $("#node-input-rdelay").val();}
+		
 		this.cparams = this.editorp.getValue();
 		this.editorp.destroy();
 		delete this.editorp;
@@ -574,17 +624,25 @@ RED.nodes.registerType('teamogy-client',{
 			<dd> msg.body.address = addresses // array of objects</dd>
 			<dd>&nbsp;</dd>
 			<dd> If you use requests for API views you can use additional options, the options can also be used in dynamic requests</dd>
-			<dt class="optional">Merge (optional)<span class="property-type">checkbox - yes/no</span></dt><dd> check if you want the output message to contain all returned records. In the background, processing is still taking place according to the Paging settings, but individual messages are not sent to the output, but only the final merged one containing all the returned records. (if not specified the value no is used)</dd>
-			<dt class="optional">Limit (optional)<span class="property-type">number</span></dt><dd> limitation of the total number of records in the response (if not specified, the value 0 is used, the value 0 means no limit)</dd>
-			<dt class="optional">Paging (optional)<span class="property-type">number</span></dt><dd> division of responses into multiple parts with the number of records returned (if not specified, the value 1000 is used)</dd>
-			<dt class="optional">Offset (optional)<span class="property-type">number</span></dt><dd> determining from which records to return, e.g. if you have a total of 100 records and want to return records 50-100, set Offset to 50, if you want to return all records leave the option at 0 (if not specified, the value 0 is used)</dd>
-			<dt class="optional">Skip (optional, in message only)<span class="property-type">boolean</span></dt><dd> adding the msg.skip=true will allow the message to pass through to the output without processing</dd>
-		</dl>
+			<dt class="optional">Merge (optional) (also in msg.merge (boolean))<span class="property-type">checkbox - yes/no</span></dt><dd> check if you want the output message to contain all returned records. In the background, processing is still taking place according to the Paging settings, but individual messages are not sent to the output, but only the final merged one containing all the returned records. (if not specified the value no is used)</dd>
+			<dt class="optional">Limit (optional) (also in msg.limit)<span class="property-type">number</span></dt><dd> limitation of the total number of records in the response (if not specified, the value 0 is used, the value 0 means no limit)</dd>
+			<dt class="optional">Paging (optional) (also in msg.paging)<span class="property-type">number</span></dt><dd> division of responses into multiple parts with the number of records returned (if not specified, the value 1000 is used)</dd>
+			<dt class="optional">Offset (optional) (also in msg.offset)<span class="property-type">number</span></dt><dd> specifies from which record to start returning data. For example, if you have 100 records total and want to return records 50-100, set Offset to 50. To return all records from the beginning, leave it at 0 (if not specified, the value 0 is used))</dd>
+			<dt class="optional">Delay (optional) (also in msg.delay)<span class="property-type">number</span></dt><dd> specifies the delay between requests, which is used for pagination (if not specified, the value 0 is used)</dd>
+			<dt class="optional">Req. repeat (optional) (also in msg.repeat)<span class="property-type">number</span></dt><dd> specifies the number of errors after which the request will be repeated (if not specified, the value 5 is used)</dd>
+			<dt class="optional">Req. delay (s) (optional) (also in msg.rdelay)<span class="property-type">number</span></dt><dd> specifies the delay between requests, which is used when retrying a request in case of an error (if not specified, the value 30 is used)</dd>
+			<dt class="optional">Skip (optional in message only, msg.skip)<span class="property-type">boolean</span></dt><dd> adding the msg.skip=true will allow the message to pass through to the output without processing</dd>
+			<dt class="optional">Connection (optional in message, msg.connection)<span class="property-type">string</span></dt><dd> replaces connection from configuration, use connection name</dd>
+			<dt class="optional">Unit (optional in message, msg.unit)<span class="property-type">number</span></dt><dd> replaces unit from connection configuration, use unit/agency id</dd>
+			<dt class="optional">Entity (optional in message, msg.entity)<span class="property-type">string</span></dt><dd> replaces entity from configuration, use v_entityName for views or r_entityName</dd>
+			<dt class="optional">Method (optional in message, msg.method)<span class="property-type">string</span></dt><dd> replaces method from configuration, use the available method for the given entity</dd>
+			</dl>
 		 
 	 <h3>Output</h3>
 		 <dl class="message-properties">
-			<dt>payload<span class="property-type">string | object</span></dt><dd> the standard output or error of the response</dd>
+			<dt>payload<span class="property-type">string | object</span></dt><dd> the standard output of the response</dd>
 			<dt>count<span class="property-type">number</span></dt><dd> number of records in the output</dd>
+			<dt>error<span class="property-type">string</span></dt><dd> error message</dd>
 			<dt>msg.*<span class="property-type">string | object</span></dt><dd> all properties of the input message</dd>
 		 </dl>
 
